--- a/src/index.hbs
+++ b/src/index.hbs
@@ -6,9 +6,25 @@
 </head>
 <body>
 {{> template/header}}
-Index Page<br>
-<input type="text" id="txt-hello"><button class="say-hello">Hello</button><br>
-<button class="goto-sub btn btn-primary">Go To Sub Page</button>
+<section class="m-top">
+    <div class="m-top-img" style="background-image: url(./img/m-top.jpg)">
+        <div class="m-top-r">
+            <i></i>
+        </div>
+        <div class="m-top-l">
+            <i></i>
+        </div>
+    </div>
+</section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
 {{> template/footer}}
 </body>
 </html>
