--- a/src/template/header.hbs
+++ b/src/template/header.hbs
@@ -1,3 +1,29 @@
 <header>
-    header
+    <div class="h-tm">
+        <div class="h-tm-btn">
+            <i class="fa fa-circle"></i> 완전판
+        </div>
+        <div class="h-tm-btn">
+            <i class="fa fa-circle"></i> 전연령
+        </div>
+        <div class="h-tm-btn">
+            <i class="fa fa-circle"></i> 성인
+        </div>
+    </div>
+    <div class="h-m">
+        <div class="h-logo">LOGO</div>
+        <ul class="h-m-btn">
+            <li>연재</li>
+            <li>완결</li>
+            <li>단행본</li>
+            <li>TOP 100</li>
+            <li>소설</li>
+            <li>SALE</li>
+            <li>BL</li>
+        </ul>
+        <div class="h-m-mem">
+            <input type="text" class="h-m-mem-ser" >
+            <i class="h-search-i fa fa-search"></i>
+            <div class="h-m-mem-btn"><i class="glyphicon glyphicon-menu-hamburger"></i></div>
+        </div>
 </header>
