--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,1 +1,15 @@
 @import 'common.less';
+
+.m-top {
+  width: 100%;
+  height: 400px;
+  margin: 110px 0px 50px 0px;
+}
+
+.m-top-img {
+  position: relative;
+  background-size: cover;
+  background-position: 50% 50%;
+  width: 100%;
+  height: 400px;
+}
