--- a/src/index.hbs
+++ b/src/index.hbs
@@ -8,11 +8,11 @@
 {{> template/header}}
 <section class="m-top">
     <div class="m-top-img" style="background-image: url(./img/m-top.jpg)">
-        <div class="m-top-r">
-            <i></i>
-        </div>
         <div class="m-top-l">
-            <i></i>
+            <i class="fa fa-angle-left"></i>
+        </div>
+        <div class="m-top-r">
+            <i class="fa fa-angle-right"></i>
         </div>
     </div>
 </section>
