--- a/src/less/main.less
+++ b/src/less/main.less
@@ -13,3 +13,16 @@
   width: 100%;
   height: 400px;
 }
+
+.m-top-l, .m-top-r {
+  display: inline-block;
+  vertical-align: middle;
+  margin-top: 140px;
+  font-size: 50px;
+  padding: 10px;
+}
+
+.m-top-r {
+  position: absolute;
+  right: 0;
+}
