--- a/src/index.hbs
+++ b/src/index.hbs
@@ -8,15 +8,39 @@
 {{> template/header}}
 <section class="m-top">
     <div class="m-top-img" style="background-image: url(./img/m-top.jpg)">
-        <div class="m-top-l">
-            <i class="fa fa-angle-left"></i>
-        </div>
-        <div class="m-top-r">
-            <i class="fa fa-angle-right"></i>
+        <div class="m-story">
+            <div class="m-top-l m-top-h">
+                <i class="fa fa-angle-left"></i>
+            </div>
+            <div class="m-top-r m-top-h">
+                <i class="fa fa-angle-right"></i>
+            </div>
         </div>
     </div>
 </section>
-<section></section>
+<section>
+    <div class="m-story m-issue">
+        <div class="m-issue-tt">
+            신작 연재
+        </div>
+        <ul class="m-issue-tt-btn">
+            <li>만화</li>
+            <li>소설</li>
+            <li><i class="fa fa-angle-left"></i></li>
+            <li><i class="fa fa-angle-right"></i></li>
+        </ul>
+        <ul class="m-issue-m">
+            <li>
+                <div class="m-issue-m-img"></div>
+                <div></div>
+            </li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+        </ul>
+        <div></div>
+    </div>
+</section>
 <section></section>
 <section></section>
 <section></section>
