--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,4 +1,6 @@
 @import 'common.less';
+@cont-border-right: solid 20px #ddd;
+
 
 .m-top {
   width: 100%;
@@ -7,22 +9,72 @@
 }
 
 .m-top-img {
-  position: relative;
   background-size: cover;
   background-position: 50% 50%;
   width: 100%;
   height: 400px;
 }
 
+.m-story {
+  position: relative;
+  margin: 0px auto;
+  width: 1180px;
+}
+
 .m-top-l, .m-top-r {
   display: inline-block;
   vertical-align: middle;
   margin-top: 140px;
-  font-size: 50px;
+  font-size: 60px;
+  line-height: 80px;
   padding: 10px;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .m-top-r {
   position: absolute;
   right: 0;
+}
+
+.m-top-h:hover {
+  color: rgba(255, 255, 255, 1);
+}
+
+.m-issue {
+  position: relative;
+  margin-top: 20px;
+}
+
+.m-issue-tt {
+  display: inline-block;
+  vertical-align: bottom;
+  font-size: 25px;
+}
+
+.m-issue-tt-btn {
+  position: absolute;
+  right: 0;
+  top: 14px;
+  display: inline-block;
+}
+
+.m-issue-tt-btn > li {
+  display: inline-block;
+}
+
+.m-issue-m > li {
+  width: calc(100% / 4);
+  height: 400px;
+  display: inline-block;
+  border-right: @cont-border-right;
+  background-color: #ffffff;
+}
+
+.m-issue-m > li:last-child {
+  border-right: 0;
+}
+
+.m-issue-m-img {
+  height: 70%;
+  background-size: cover;
 }
