--- a/src/index.hbs
+++ b/src/index.hbs
@@ -20,25 +20,70 @@
 </section>
 <section>
     <div class="m-story m-issue">
-        <div class="m-issue-tt">
-            신작 연재
+        <div class="m-issue-t">
+            <div class="m-issue-tt">
+                신작 연재
+            </div>
+            <ul class="m-issue-tt-btn">
+                <li>
+                    <div class="m-issue-tt-btn-r">
+                        만화
+                    </div>
+                </li>
+                <li>
+                    <div class="m-issue-tt-btn-r">
+                        소설
+                    </div>
+                </li>
+                <li>
+                    <div class="m-issue-tt-btn-n">
+                        <i class="fa fa-angle-left"></i>
+                        <div>
+                </li>
+                <li>
+                    <div class="m-issue-tt-btn-n">
+                        <i class="fa fa-angle-right"></i>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <ul class="m-issue-tt-btn">
-            <li>만화</li>
-            <li>소설</li>
-            <li><i class="fa fa-angle-left"></i></li>
-            <li><i class="fa fa-angle-right"></i></li>
-        </ul>
         <ul class="m-issue-m">
             <li>
-                <div class="m-issue-m-img"></div>
-                <div></div>
+                <div class="m-issue-m-img"  style="background-image: url(./img/m-eve1.jpg)"></div>
+                <div class="m-issue-txt">
+                    <div class="m-issue-txt-s">일상</div>
+                    <div class="m-issue-txt-b">고양이의 하루</div>
+                    <div class="m-issue-txt-m">러라라라라<br>라라라라</div>
+                </div>
             </li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
+            <li>
+                <div class="m-issue-m-img"  style="background-image: url(./img/m-eve1.jpg)"></div>
+                <div class="m-issue-txt">
+                    <div class="m-issue-txt-s">일상</div>
+                    <div class="m-issue-txt-b">고양이의 하루</div>
+                    <div class="m-issue-txt-m">러라라라라<br>라라라라</div>
+                </div>
+            </li>
+            <li>
+                <div class="m-issue-m-img"  style="background-image: url(./img/m-eve1.jpg)"></div>
+                <div class="m-issue-txt">
+                    <div class="m-issue-txt-s">일상</div>
+                    <div class="m-issue-txt-b">고양이의 하루</div>
+                    <div class="m-issue-txt-m">러라라라라<br>라라라라</div>
+                </div>
+            </li>
+            <li>
+                <div class="m-issue-m-img"  style="background-image: url(./img/m-eve1.jpg)"></div>
+                <div class="m-issue-txt">
+                    <div class="m-issue-txt-s">일상</div>
+                    <div class="m-issue-txt-b">고양이의 하루</div>
+                    <div class="m-issue-txt-m">러라라라라<br>라라라라</div>
+                </div>
+            </li>
         </ul>
-        <div></div>
+        <div class="m-issue-event" style="background-image: url(./img/m-eve1.jpg)">
+            <img src="./img/m-eve1.jpg" width="1180" height="180">
+        </div>
     </div>
 </section>
 <section></section>
