--- a/src/less/main.less
+++ b/src/less/main.less
@@ -49,12 +49,13 @@
   display: inline-block;
   vertical-align: bottom;
   font-size: 25px;
+  margin-bottom: 10px;
 }
 
 .m-issue-tt-btn {
   position: absolute;
   right: 0;
-  top: 14px;
+  top: 0;
   display: inline-block;
 }
 
@@ -62,12 +63,30 @@
   display: inline-block;
 }
 
+.m-issue-tt-btn-r {
+  padding: 10px;
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.m-issue-tt-btn-n {
+  font-size: 18px;
+  padding: 5px 10px 5px 10px;
+  border: solid 1px #c5cbd3;
+}
+
+.m-issue-m {
+  position: relative;
+  vertical-align: top;
+}
+
 .m-issue-m > li {
   width: calc(100% / 4);
-  height: 400px;
   display: inline-block;
   border-right: @cont-border-right;
   background-color: #ffffff;
+  height: 500px;
+  vertical-align: top;
 }
 
 .m-issue-m > li:last-child {
@@ -75,6 +94,39 @@
 }
 
 .m-issue-m-img {
-  height: 70%;
+  height: 60%;
+  width: 100%;
+  background-size: cover;
+}
+
+.m-issue-txt {
+  height: 40%;
+  width: 100%;
+  letter-spacing: -1px;
+}
+
+.m-issue-txt-s {
+  font-size: 14px;
+  color: #8fa6c0;
+  margin: 30px 0 0 20px;
+}
+
+.m-issue-txt-b {
+  font-size: 20px;
+  margin: 2px 0 0 20px;
+}
+
+.m-issue-txt-m {
+  font-size: 14px;
+  border-top: solid 1px #eff1f4;
+  color: #999;
+  margin: 50px 0 0 20px;
+  padding-top: 10px;
+}
+
+.m-issue-event {
+  width: 100%;
+  hieght: 180px;
+  margin-top: 50px;
   background-size: cover;
 }
