--- a/src/index.hbs
+++ b/src/index.hbs
@@ -18,27 +18,25 @@
         </div>
     </div>
 </section>
-<section>
-    <div class="m-story m-issue">
+<section class="m-issue">
+    <div class="m-story">
         <div class="m-issue-t">
-            <div class="m-issue-tt">
+            <div class="m-tt">
                 신작 연재
+            </div>
+            <div class="m-issue-gen">
+                <label class="m-issue-tt-btn-r">
+                    <input type="radio" name="m-radio" value="만화" checked> 만화
+                </label>
+                <label class="m-issue-tt-btn-r">
+                    <input type="radio" name="m-radio" value="소설"> 소설
+                </label>
             </div>
             <ul class="m-issue-tt-btn">
                 <li>
-                    <div class="m-issue-tt-btn-r">
-                        만화
-                    </div>
-                </li>
-                <li>
-                    <div class="m-issue-tt-btn-r">
-                        소설
-                    </div>
-                </li>
-                <li>
                     <div class="m-issue-tt-btn-n">
                         <i class="fa fa-angle-left"></i>
-                        <div>
+                    </div>
                 </li>
                 <li>
                     <div class="m-issue-tt-btn-n">
@@ -82,13 +80,315 @@
             </li>
         </ul>
         <div class="m-issue-event" style="background-image: url(./img/m-eve1.jpg)">
-            <img src="./img/m-eve1.jpg" width="1180" height="180">
+            <img src="./img/m-event.jpg" width="1180" height="180">
         </div>
     </div>
 </section>
-<section></section>
-<section></section>
-<section></section>
+<section class="m-event">
+    <div class="m-story">
+        <div class="m-event-t">
+            <div class="m-tt">
+                무료공개, 파격할인 만화
+            </div>
+            <div class="m-all">
+                전체보기
+            </div>
+        </div>
+        <ul class="m-event-m">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</section>
+<section class="m-tops">
+    <div class="m-story">
+        <div class="m-event-t">
+            <div class="m-tt">
+                인기 만화
+            </div>
+            <div class="m-all">
+                전체보기
+            </div>
+        </div>
+        <ul class="m-tops-li">
+            <li>
+                <div class="m-tops-gen">
+                    <div class="m-tops-gen-tit">
+                        판타지 Top 5
+                    </div>
+                    <div class="m-topoftop">
+                        <div class="m-tops1 m-top-line">1</div>
+                        <div class="m-tops1-t m-top-line">
+                                    <span>
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                            일상 / 평화
+                        </div>
+                    </div>
+                    <ul class="m-top-gen-li">
+                        <li>
+                            <div class="m-tops-no m-top-line">2</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">3</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">4</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">5</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="m-tops-gen">
+                    <div class="m-tops-gen-tit">
+                        판타지 Top 5
+                    </div>
+                    <div class="m-topoftop">
+                        <div class="m-tops1 m-top-line">1</div>
+                        <div class="m-tops1-t m-top-line">
+                                    <span>
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                            일상 / 평화
+                        </div>
+                    </div>
+                    <ul class="m-top-gen-li">
+                        <li>
+                            <div class="m-tops-no m-top-line">2</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">3</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">4</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">5</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="m-tops-gen">
+                    <div class="m-tops-gen-tit">
+                        판타지 Top 5
+                    </div>
+                    <div class="m-topoftop">
+                        <div class="m-tops1 m-top-line">1</div>
+                            <div class="m-tops1-t m-top-line">
+                                    <span>
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                일상 / 평화
+                            </div>
+                    </div>
+                    <ul class="m-top-gen-li">
+                        <li>
+                            <div class="m-tops-no m-top-line">2</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">3</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">4</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="m-tops-no m-top-line">5</div>
+                            <div class="m-tops-name m-top-line">
+                                <div class="m-tops-name-t">
+                                    <span class="m-tops-name-tt">
+                                        안녕, 하루
+                                        <br>
+                                    </span>
+                                    일상 / 평화
+                                </div>
+                                <img align="right" src="./img/m-top2.jpg" height="80" width="80">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="m-today m-story">
+    <div class="m-tt m-event-t">오늘의 만화</div>
+    <ul class="m-today-c">
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+        <li>
+            <div class="m-today-c-img"></div>
+            <div class="m-today-c-t">
+                그 끝에 있는 것
+                <span><br>BL/로맨스</span>
+            </div>
+        </li>
+    </ul>
+</section>
 <section></section>
 <section></section>
 <section></section>
