--- a/src/less/common.less
+++ b/src/less/common.less
@@ -1,8 +1,12 @@
 @font-color: #333;
+@cont-border-right: solid 20px #eff1f4;
+@cont-sub-border: solid 1px #c5cbd3;
+@cont-ca-tit: #666;
+@cont-ca-gen: #8fa6c0;
 
 body {
   color: @font-color;
-  background-color: #ddd;
+  background-color: #eff1f4;
 }
 
 ul {
