--- a/src/template/footer.hbs
+++ b/src/template/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-    &copy; Copyright, All rights reserved.
+    &copy; Copyright, All rights reserved.<br><br><br><br><br><br><br><br><br>
 </footer>
